--- a/index.css
+++ b/index.css
@@ -10,3 +10,19 @@
 body {
   background-color: #f2f2f2;
 }
+
+section {
+  padding: 25px 0px 0px 25px;
+}
+
+section h1 {
+  font-weight: bold;
+  font-size: 5.34vw;
+  width: 69.3vw;
+}
+
+section h2 {
+  font-size: 14px;
+  font-weight: lighter;
+  margin-top: 15px;
+}
