--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 @import "header.css";
+@import "research.css";
+@import "results.css";
 
 * {
   box-sizing: border-box;
@@ -11,60 +13,3 @@ body {
   background-color: #ffffff;
 }
 
-section {
-  padding: 25px 0px 0px 20px;
-}
-
-section h1 {
-  font-weight: bold;
-  font-size: 22.4px;
-  width: 78.7vw;
-}
-
-section h2 {
-  font-size: 14.2px;
-  font-weight: lighter;
-  margin-top: 15px;
-  margin-bottom: 38px;
-}
-
-section .searchInput{
-
-  display:flex;
-  align-items: center;
-  
-}
-
-section .searchInput i{
-   height:50px;
-  width:50px;
-  font-size:20px;
-  display: flex;
-  align-items: center;
-  justify-content:center;
-}
-
-section .searchInput .location{
-  
-  background-color: #f2f2f2;
-  border-top-left-radius: 30%;
-  border-bottom-left-radius: 30%;
-}
-
-section .searchInput input {
-  height: 50px;
-  border: 2px solid #f2f2f2;
-  padding: 15px 0px 15px 15px;
-  width: 280px;
-  font-size:18px;
-  font-weight:bold;
-}
-
-section .searchInput .search{
-  background-color: #0065FC;
-  color: white;
-  border-radius: 30%;
-  font-size: 17px;
-  position: relative;
-  right: 30px;
-}
