--- a/results.css
+++ b/results.css
@@ -1,13 +1,16 @@
-.results{
-    
+@import 'images.css';
+
+.results .result{
+    padding: 42px 20px 27px 20px;
 }
+
+.bold{ font-weight: bold}
 
 .results .popular{
   background-color: #f2f2f2;
-  padding: 43px 20px 27px 20px;
 }
 
-.results .popular header{
+.results header{
     display:flex;
     flex-direction:row;
     align-items:center;
@@ -15,9 +18,13 @@
     margin-bottom:25px;
 }
 
-.results .popular header h2{
+.results header h2{
    font-size:22px;
    font-weight:bold;
+}
+
+.results .popular header{
+    margin-bottom:30px;
 }
 
 .results .popular header i{
@@ -34,7 +41,10 @@
    height:155px;
    background-color: white;
    border-radius: 25px;
-   margin-bottom:10px;
+   margin-bottom:11px;
+   -webkit-box-shadow:0px 0px 6px 3px #f5f5f5 ;
+-moz-box-shadow:0px 0px 6px 3px #f5f5f5 ;
+box-shadow:0px 0px 6px 3px #f5f5f5 ;
    
 }
 
@@ -54,28 +64,26 @@
     margin-bottom:14px;
 }
 
-.results .popular .card .description p{
+.results .card .description p{
     font-size:14px;
+   
+}
+
+.results .popular .card .description p{
     margin-bottom: 44px;
 }
 
-.results .popular .card img{
-    width: 128px;
-    height: 100%;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-    margin-right: 20px;
-}
+
 
 .results .card .rating {
-   height: 11.3px;
+   height: 13px;
    display: flex;
    align-items:center;
    justify-content:flex-start;
 }
 
 .results .card .rating .star {
-   font-size:11.5px;
+   font-size:13px;
    color: #0065fc;
 }
 
@@ -83,5 +91,62 @@
    color:#d9d9d9;
 }
 
+.results .logement{
+    background-color: white;
+}
+
+.results .logement header{
+    margin-bottom:23px;
+}
 
 
+.results .logement .card{
+    display: flex;
+    flex-direction: column;
+     padding: 5px;
+     height: 210px;
+}
+
+
+.results .logement .card .description {
+    margin-left: 11px;
+}
+
+
+.results .logement .card .description h3{
+    font-size:16px;
+    font-weight:bold;
+    margin-top: 11px;
+    margin-bottom:11px;
+}
+
+
+.results .logement .card .description p{
+    margin-bottom: 11px;
+    
+}
+
+.results .logement .more{
+    font-size:18px;
+    font-weight:bold;
+    margin-top:35px;
+}
+
+.results .activities{
+    padding-top: 33px;
+}
+
+.results .activities header{
+    margin-bottom: 32px;
+}
+
+.results .activities .card{
+    height:190px;
+    margin-bottom: 24px;
+}
+
+.results .activities .card h3{
+    margin-top: 23px;
+    margin-left: 20px;
+    font-size:16px;
+}
