--- a/images.css
+++ b/images.css
@@ -27,22 +27,31 @@
     background-position: 50% 25%;
 }
 
-.vieuxPort{background-image: url('images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg');}
-.results #activities .card .fortPomegues{
+#vieuxPort_img{background-image: url('images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg');}
+.results #activities .card #fortPomegues_img{
     background-image: url('images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg');
  background-position: 50%;}
-.ilesFrioul{background-image: url('images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg');}
-.parcCalangues{background-image: url('images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg');}
-.notreDame{background-image: url('images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg');}
-.parcLongchamp{background-image: url('images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg');}
+#ilesFrioul_img{background-image: url('images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg');}
+#parcCalangues_img{background-image: url('images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg');}
+#notreDame_img{background-image: url('images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg');}
+#parcLongchamp_img{background-image: url('images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg');}
 
-.soleilMatin{background-image: url('images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg');}
-.coeurEau{background-image: url('images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg');}
-.bleuBlanc{background-image: url('images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg');}
+#soleilMatin{background-image: url('images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg');}
+#coeurEau{background-image: url('images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg');}
+#bleuBlanc{background-image: url('images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg');}
 
-.cannebiere{ background-image: url('images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg');}
-.port{ background-image: url('images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg');}
-.mouettes{ background-image: url('images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg');}
-.mer{ background-image: url('images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg');}
-.panier{ background-image: url('images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg');}
-.amina{ background-image: url('images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg');}
+#cannebiere{ background-image: url('images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg');}
+#port{ background-image: url('images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg');}
+#mouettes{ background-image: url('images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg');}
+#mer{ background-image: url('images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg');}
+#panier{ background-image: url('images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg');}
+#amina{ background-image: url('images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg');}
+
+@media all and (min-width: 1440px){
+    .results #activities #parcCalangues_img{height: 388px;}
+     .results #activities #vieuxPort_img{height: 388px;}
+     .results #activities #ilesFrioul_img{height: 109px;}
+     .results #activities #fortPomegues_img{height: 180px;}
+     .results #activities #notreDame_img{height: 140px;}
+     .results #activities #parcLongchamp_img{height: 153px;}
+}
