--- a/results.css
+++ b/results.css
@@ -140,6 +140,11 @@ box-shadow:0px 0px 6px 3px #f5f5f5 ;
     margin-bottom: 32px;
 }
 
+.results #activities .bloc_Card{
+    display: flex;
+    flex-direction: column
+}
+
 .results #activities .card{
     height:190px;
     margin-bottom: 24px;
@@ -152,3 +157,92 @@ box-shadow:0px 0px 6px 3px #f5f5f5 ;
 }
 
 
+
+@media all and (min-width: 1440px){
+  .results{
+      display:flex;
+      flex-wrap: wrap;
+      padding-right: 50px;
+      padding-left: 50px;
+      justify-content:space-between;
+  }
+
+  .results .result{
+      border-radius: 20px;
+  }
+
+  .results #popular{
+    order: 2;
+    width: 420px;
+    padding: 45px 40px 2px 37px;
+  }
+
+  .results #popular header{
+      margin-bottom: 25px;
+  }
+
+   .results #popular .cards .card{
+      width: 343px;
+      margin-bottom: 32px;
+  }
+
+   .results #logements{
+      order: 1;
+      width: 880px;
+      padding: 45px 40px 45px 40px;
+      background-color: #f2f2f2;
+  }
+
+  .results #logements .cards{
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content:space-between;
+  }
+
+   .results #logements .cards .card{
+      width: 246px;
+      margin-bottom: 28px;
+  }
+
+  .results #logements .more{
+      margin-top:15px;
+  }
+
+   .results #activities{
+      order: 3;
+      padding-left: 0;
+      padding-right:0;
+      padding-bottom: 60px;
+      padding-top:65px;
+      width: 100%;
+  }
+
+  .results #activities header{
+      margin-bottom: 25px;
+  }
+
+  .results #activities .bloc_Card {
+      justify-content:space-between;
+  }
+
+   .results #activities .cards{
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content:space-between;
+  }
+
+   .results #activities .cards .card{
+      width:302px;
+  }
+
+   .results #activities .cards #vieuxPort, .results #activities .cards #parcCalangues{
+      height: 444px;
+  }
+
+  .results #activities .cards #fortPomegues{  height: 236px; }
+  .results #activities .cards #ilesFrioul{  height: 163px; }
+  .results #activities .cards #notreDame{  height: 194px; }
+  .results #activities .cards #parcLongchamp{  height: 208px; }
+
+
+}
