--- a/footer.css
+++ b/footer.css
@@ -3,6 +3,7 @@ footer{
     padding-top: 50px;
     padding-left: 30px;
     padding-bottom: 50px;
+    padding-right: 365px;
 }
 
 footer .category{
@@ -10,11 +11,11 @@ footer .category{
     flex-direction: column;
 }
 
-footer .assistance{
+footer #assistance{
     margin-top:40px;
 }
 
-footer .hebergements{
+footer #hebergements{
     margin-top:30px;
 }
 
@@ -29,5 +30,28 @@ footer a{
     text-decoration:none;
     color:black;
     margin-bottom:20px;
+}
+
+@media all and (min-width: 1440px){
+
+    footer{
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-bottom: 54px;
+    display: flex;
+   align-items: center;
+   justify-content:space-between;
+
+}
+
+footer #assistance{
+    margin-top:0px;
+}
+
+footer #hebergements{
+    margin-top:0px;
+}
+
+
 }
 
