--- a/Css/results.css
+++ b/Css/results.css
@@ -176,7 +176,6 @@ box-shadow:0px 0px 6px 3px #f5f5f5 ;
 }
 
 
-
 }
 
 @media all and (min-width: 768px){
@@ -282,6 +281,8 @@ box-shadow:0px 0px 6px 3px #f5f5f5 ;
 .results #activities .card {
     height: 18.56vw;
     width:32.72vw;
+
+}
 
 }
 
